--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   "homepage": "https://github.com/Romez/layout-designer-project-lvl1#readme",
   "devDependencies": {
     "htmlhint": "^0.14.1",
+    "http-server": "^0.12.3",
     "stylelint": "^13.6.1",
     "stylelint-config-rational-order": "^0.1.2",
     "stylelint-config-standard": "^20.0.0",
